--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,115 @@
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 h1 {
-  color: brown;
+  font-size: 50px;
+  color: #999999;
+}
+.show {
+  width: 50vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 30vh;
+  margin: 20px;
+  margin-right: 50px;
+  background-color: #999999;
+  -webkit-box-shadow: 5px 5px 5px 5px #404040;
+          box-shadow: 5px 5px 5px 5px #404040;
+}
+.show h2 {
+  font-size: 30px;
+  font-family: 'Lato', sans-serif;
+  color: #FFF;
+}
+.show p {
+  font-size: 25px;
+  margin: 8px;
+}
+.nav {
+  background-color: #404040;
+  height: 8vh;
+}
+.nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+.nav li {
+  text-transform: uppercase;
+  font-weight: bolder;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #FFF;
+}
+.nav li:hover {
+  cursor: pointer;
+  background-color: #63686e;
+  color: #404040;
+}
+.nav a {
+  text-decoration: none;
+  color: #FFF;
+}
+.footer {
+  background-color: #404040;
+  height: 7vh;
+}
+.footer h1 {
+  font-size: 45px;
+  color: #FFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.acceuil h1 {
+  color: #63686e;
+  font-size: 60px;
+  margin-bottom: 5px;
+  margin-top: 250px;
+  font-family: 'Abril Fatface', cursive;
+}
+.acceuil p {
+  color: #63686e;
+  font-size: 50px;
+  margin-left: 250px;
+  margin-bottom: 250px;
 }
