--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,3 +1,95 @@
-h1 {
-    color: brown;
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+h1 {
+  font-size: 50px;
+  color: #999999;
+}
+
+
+.show {
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 30vh;
+    margin: 20px;
+    margin-right: 50px;
+    background-color: #999999;
+    box-shadow: 5px 5px 5px 5px #404040;
+      h2 {
+        font-size: 30px;
+        font-family: 'Lato', sans-serif;
+        color: #FFF;
+      }
+      p {
+        font-size: 25px;
+        margin: 8px;
+      }
+}
+
+.nav {
+    background-color: #404040;
+    height: 8vh;
+      ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      }
+      li {
+          text-transform: uppercase;
+          font-weight: bolder;
+          display: flex;
+          align-items: center;
+          height: 100%;
+          padding-left: 20px;
+          padding-right: 20px;
+          color: #FFF;
+          &:hover {
+            cursor: pointer;
+            background-color: #63686e;
+            color: #404040;
+          }
+        }
+        a {
+          text-decoration: none;
+          color: #FFF;
+        }
+ }
+
+.footer {
+    background-color: #404040;
+    height: 7vh;
+    h1 {
+      font-size: 45px;
+      color: #FFF;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+}
+
+.acceuil {
+  h1 {
+    color: #63686e;
+    font-size: 60px;
+    margin-bottom: 5px;  
+    margin-top: 250px;
+    font-family: 'Abril Fatface', cursive;
+  }
+  p {
+    color: #63686e;
+    font-size: 50px;
+    margin-left: 250px;
+    margin-bottom: 250px;
+  }
+}
+
+
+    
